<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">FactoryTest</string>
    <string name="version_name">V1.0</string>
    <string name="factory_test_secret_code">8888</string>
    <string name="system_group_title">System</string>
    <string name="screen_group_title">Screen</string>
    <string name="ring_group_title">Ring&#038;Vibra</string>
    <string name="phone_group_title">Phone</string>
    <string name="annex_group_title">Annex</string>
    <string name="wireless_group_title">Wireless</string>
    <string name="sensor_group_title">Sensor</string>
    <string name="camera_group_title">Camera</string>
    <string name="key_group_title">Key</string>
    <string name="result_group_title">TestReport</string>
    <string name="test_result_title">TestReport</string>
    <string name="sdcard_test_title">SDCard Test</string>
    <string name="otg_test_title">OTG Test</string>
    <string name="charge_test_title">Charge Test</string>
    <string name="headset_test_title">Headset Test</string>
    <string name="msix_headset_test_title">M6 Headset Test</string>
    <string name="typec_digital_headset_test_title">"TYPE-C Digital Headset Test"</string>
    <string name="typec_analog_headset_test_title">"TYPE-C Analog Headset Test"</string>
    <string name="typec_headset_test_title">"TYPE-C Headset Test"</string>
    <string name="dual_microphone_test_title">Dual Microphone Test</string>
    <string name="led_test_title">LED Test</string>
    <string name="scan_test_title">Scan Test</string>
    <string name="safemodule_test_title">SafeModule Test</string>
    <string name="serialport_test_title">SerialPort Test</string>
    <string name="serialport_simple_test_title">"SerialPort Simple Test"</string>
    <string name="front_camera_test_title">Front Camera Test</string>
    <string name="back_camera_test_title">Back Camera Test</string>
    <string name="scan_camera_test_title">Scan Camera Test</string>
    <string name="iris_camera_test_title">Iris Camera Test</string>
    <string name="electric_torch_test_title">"Electric Torch Test"</string>
    <string name="key_test_title">Key Test</string>
    <string name="microphone_echo_test_title">Microphone Echo Test</string>
    <string name="sim_card_test_title">SIM Test</string>
    <string name="psam_card_test_title">PSAM Test</string>
    <string name="handset_test_title">Handset Test</string>
    <string name="call_test_title">Call Test</string>
    <string name="mobile_data_test_title">"Moblie Data Test"</string>
    <string name="mobile_data_test_website">http://www.wangzhi360.com</string>
    <string name="motor_test_title">Motor Test</string>
    <string name="speaker_test_title">Speaker Test</string>
    <string name="screen_color_test_title">Screen Color Test</string>
    <string name="screen_backlight_test_title">Screen Backlight Test</string>
    <string name="single_finger_touch_test_title">Single Finger Test</string>
    <string name="multi_finger_touch_test_title">Multi Finger Test</string>
    <string name="gravity_sensor_test_title">Gravity Sensor Test</string>
    <string name="light_sensor_test_title">Light Sensor Test</string>
    <string name="proximity_sensor_test_title">Proximity Sensor Test</string>
    <string name="fingerprint_sensor_test_title">Fingerprint Test</string>
    <string name="nfc_sensor_test_title">NFC Test</string>
    <string name="accelerometer_sensor_test_title">Accelerometer Test</string>
    <string name="magnetic_fieled_sensor_test_title">Magnetic Fieled Test</string>
    <string name="pressure_sensor_test_title">Pressure Test</string>
    <string name="gyroscope_sensor_test_title">Gyroscope Test</string>
    <string name="step_count_sensor_test_title">Step Count Test</string>
    <string name="system_version_test_title">System Version Test</string>
    <string name="rf_cali_test_title">RF Cali Test</string>
    <string name="rtc_test_title">System Clock Test</string>
    <string name="fm_radio_test_title">FMRadio Test</string>
    <string name="dmr_test_title">"DMR Test"</string>
    <string name="dmr_test_result">DMR Test Result:</string>
    <string name="wifi_test_title">Wifi Test</string>
    <string name="bluetooth_test_title">Bluetooth Test</string>
    <string name="gps_test_title">GPS Test</string>
    <string name="auto_test_title">Auto Test</string>
    <string name="undefined_test_title">Empty</string>
    <string name="not_found_test_item">No test item</string>
    <string name="illegal_test_group">Illegal test group</string>
    <string name="test_result_not_tested_text">Not tested</string>
    <string name="test_result_pass_text">Pass</string>
    <string name="test_result_fail_text">Fail</string>
    <string name="reset_result_title">Reset</string>
    <string name="test_result_id_title">ID</string>
    <string name="test_item_title">Title</string>
    <string name="test_item_result_title">Result</string>
    <string name="pass_button_text">Pass</string>
    <string name="fail_button_text">Fail</string>
    <string name="exit_test_tip">Please exit the test by clicking on the pass or fail button</string>
    <string name="android_version_test_title">Android Version：</string>
    <string name="kernel_vesiont_test_title">Kernel Version：</string>
    <string name="software_version_test_title">Software Version：</string>
    <string name="device_id_test_title">Device IMEI：</string>
    <string name="auto_test_pass_tip">"Test passed, the application will enter the next test in "<xliff:g id="system">%d</xliff:g>" second"</string>
    <string name="auto_test_fail_tip">"Test failed, the application will enter the next test in "<xliff:g id="system">%d</xliff:g>" second"</string>
    <string name="gsm_serial_test_title">"GSM SN："</string>
    <string name="sn1_test_title">"SN1："</string>
    <string name="snn_test_title">"SNN："</string>
    <string name="pass">Pass</string>
    <string name="fail">Fail</string>
    <string name="calibration_test_title">"Calibration："</string>
    <string name="comprehensive_surver_test_title">"Comprehensive Surver："</string>
    <string name="system_clock_test_title">System Clock</string>
    <string name="screen_color_test_continue_tip">Tap the screen to continue</string>
    <string name="screen_color_test_finish_tip">Test passed</string>
    <string name="motor_test_tip">Touch screen to test vibration</string>
    <string name="speaker_test_play_tip">Playing music</string>
    <string name="speaker_test_media_name">Test.ogg</string>
    <string name="speaker_test_play_fail"><xliff:g id="system">%s</xliff:g>" playback failed"</string>
    <string name="call_test_number">112</string>
    <string name="handset_test_play_tip">Playing music</string>
    <string name="handset_test_media_name">Test.ogg</string>
    <string name="microphone_echo_test_start_record_title">Start recording</string>
    <string name="microphone_echo_test_play_record_title">Play recording</string>
    <string name="charge_test_battery_status_pass">"Battery state："&lt;font color="green"&gt;<xliff:g id="system">%s</xliff:g>&lt;/font&gt;</string>
    <string name="charge_test_battery_status_fail">"Batter state："&lt;font color="red"&gt;<xliff:g id="system">%s</xliff:g>&lt;/font&gt;</string>
    <string name="charge_test_battery_status_unknown">"Unknown"</string>
    <string name="charge_test_battery_status_charging">Charging</string>
    <string name="charge_test_battery_status_discharging">No charge</string>
    <string name="charge_test_battery_status_full">Filled</string>
    <string name="charge_test_battery_status_not_charging">Uncharged</string>
    <string name="charge_test_battery_voltage_pass">"Battery voltage："&lt;font color="green"&gt;<xliff:g id="system">%s</xliff:g>&lt;/font&gt;</string>
    <string name="charge_test_battery_voltage_fail">"Battery voltage："&lt;font color="red"&gt;<xliff:g id="system">%s</xliff:g>&lt;/font&gt;</string>
    <string name="charge_test_battery_voltage_unknown">Unknown</string>
    <string name="charge_test_battery_plugged_pass">"Charge type："&lt;font color="green"&gt;<xliff:g id="system">%s</xliff:g>&lt;/font&gt;</string>
    <string name="charge_test_battery_plugged_fail">"Charge type："&lt;font color="red"&gt;<xliff:g id="system">%s</xliff:g>&lt;/font&gt;</string>
    <string name="charge_test_battery_plugged_ac">Adapter charging</string>
    <string name="charge_test_battery_plugged_usb">USB charging</string>
    <string name="charge_test_battery_plugged_wireless">Wireless charging</string>
    <string name="charge_test_battery_plugged_unknown">Unknown</string>
    <string name="charge_test_battery_current_pass">"Charge current："&lt;font color="green"&gt;<xliff:g id="system">%s</xliff:g>&lt;/font&gt;</string>
    <string name="charge_test_battery_current_fail">"Charge current："&lt;font color="red【"&gt;<xliff:g id="system">%s</xliff:g>&lt;/font&gt;</string>
    <string name="charge_test_unknown_current">Obtain fail</string>
    <string name="headset_test_headset_not_plugged">Headset not inserted</string>
    <string name="headset_test_headset_plugged">Headset inserted</string>
    <string name="headset_test_start_recorder">Start recording</string>
    <string name="headset_test_start_play">Start playing</string>
    <string name="camera_flash_test_tip">"The camera supports flashing lights, please note that the flash is on!"</string>
    <string name="front_camera_not_found">Did not find the front camera</string>
    <string name="back_camera_not_found">Did not find the back camera</string>
    <string name="iris_camera_not_found">Did not find the iris camera</string>
    <string name="camera_open_fail">Camera failed to open</string>
    <string name="current_light_value_title">Current value：</string>
    <string name="light_sensor_not_support">The device does not support light sensor</string>
    <string name="proximity_sensor_distance_title">Distance data:</string>
    <string name="proximity_sensor_origin_title">Origin data:</string>
    <string name="obtain_proximity_sensor_fail">Failed to get light sensor</string>
    <string name="gravity_x_axis_value_title">X-axis value:</string>
    <string name="gravity_y_axis_value_title">Y-axis value:</string>
    <string name="gravity_z_axis_value_title">Z-axis value:</string>
    <string name="obtain_gravity_sensor_fail">Failed to get gravity sensor</string>
    <string name="wifi_state_title">Current wifi state:</string>
    <string name="wifi_list_title">Currently scanned Wifi list:</string>
    <string name="wifi_signal_title">"Signal strength: %d"</string>
    <string name="empty_wifi_list">Empty</string>
    <string name="wifi_openning_state_text">Opening</string>
    <string name="wifi_opened_state_text">Opened</string>
    <string name="wifi_closing_state_text">Closing</string>
    <string name="gps_state_title">Currently GPS state：</string>
    <string name="search_satellite_time_cost">Search time cost：</string>
    <string name="gps_list_title">Currently searched satellite list: </string>
    <string name="otg_disk_state_title">OTG disk state：</string>
    <string name="otg_disk_total_size_title">OTG disk total size：</string>
    <string name="otg_disk_free_size_title">OTG disk free size：</string>
    <string name="otg_disk_name_title">OTG disk name：</string>
    <string name="main_microphone_title">Main</string>
    <string name="sub_microphone_title">Sub</string>
    <string name="dual_microphone_title">Dual</string>
    <string name="dual_microphone_tips_text">"Test method:\n Blow gently on the main wheat sub wheat, then play the recording"</string>
    <string name="dual_microphone_record_title">Record</string>
    <string name="turn_off_led_title">Turn off LED</string>
    <string name="red_led_title">Red LED</string>
    <string name="blue_led_title">Blue LED</string>
    <string name="green_led_title">Green LED</string>
    <string name="white_led_title">White LED</string>
</resources>