<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_button_container"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="8dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/led_test_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/turn_off_led"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/turn_off_led_title" />

                    <RadioButton
                        android:id="@+id/red_led"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/red_led_title" />

                    <RadioButton
                        android:id="@+id/blue_led"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/blue_led_title" />

                    <RadioButton
                        android:id="@+id/green_led"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/green_led_title" />

                    <RadioButton
                        android:id="@+id/white_led"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/white_led_title" />

                </RadioGroup>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <include layout="@layout/bottom_button" />

</RelativeLayout>