<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_button_container"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="8dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/dual_microphone_tips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/dual_microphone_tips_text"
                    android:textSize="@dimen/test_item_text_size" />

                <TextView
                    android:id="@+id/dual_microphone_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="6dp"
                    android:gravity="center"
                    android:textSize="@dimen/test_item_text_size" />

                <LinearLayout
                    android:id="@+id/dual_microphone_control"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="6dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/dual_microphone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:text="@string/dual_microphone_title" />

                    <Button
                        android:id="@+id/main_microphone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:text="@string/main_microphone_title" />

                    <Button
                        android:id="@+id/sub_microphone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sub_microphone_title" />

                </LinearLayout>

                <Button
                    android:id="@+id/record_or_play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/dual_microphone_record_title" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <include layout="@layout/bottom_button" />

</RelativeLayout>