<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:orientation="vertical"
        android:layout_above="@+id/bottom_button_container">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/test_item_text_size"
                android:text="@string/gps_state_title"/>

            <TextView
                android:id="@+id/gps_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/test_item_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/test_item_text_size"
                android:text="@string/search_satellite_time_cost"/>

            <TextView
                android:id="@+id/time_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/test_item_text_size" />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/test_item_text_size"
            android:text="@string/gps_list_title"/>

        <ListView
            android:id="@+id/gps_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scrollbars="none"
            android:divider="@null" />


    </LinearLayout>

    <include layout="@layout/bottom_button"/>

</RelativeLayout>