<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_button_container"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gravity_x_axis_value_title"
                android:textSize="@dimen/test_item_text_size" />

            <TextView
                android:id="@+id/gravity_x_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/test_item_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gravity_y_axis_value_title"
                android:textSize="@dimen/test_item_text_size" />

            <TextView
                android:id="@+id/gravity_y_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/test_item_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/gravity_z_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gravity_z_axis_value_title"
                android:textSize="@dimen/test_item_text_size" />

            <TextView
                android:id="@+id/gravity_z_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/test_item_text_size" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="4dp"
            android:gravity="center">

            <com.android.factorytest.view.CompassView
                android:id="@+id/compass_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

		</LinearLayout>

    </LinearLayout>
    
    <include layout="@layout/bottom_button" />

</RelativeLayout>
